methods.picture.MethodsPicture.scala.error
Erreur de compilation :
MethodsPicture:5: error: value bleu is not a member of object java.awt.Color
avance(2);setCouleurBrosse(Color.bleu)fairev()
                                 ^MethodsPicture:7: error: value fairev is not a member of Unit
avance(2);setCouleurBrosse(Color.green)fairev()
                                       ^MethodsPicture:14: error: value bleu is not a member of object java.awt.Color
avance(2);setCouleurBrosse(Color.bleu)fairev()
                                 ^MethodsPicture:16: error: value fairev is not a member of Unit
avance(2);setCouleurBrosse(Color.green)fairev()
                                       ^MethodsPicture:23: error: value bleu is not a member of object java.awt.Color
avance(2);setCouleurBrosse(Color.bleu)fairev()
                                 ^MethodsPicture:25: error: value fairev is not a member of Unit
avance(2);setCouleurBrosse(Color.green)fairev()
                                       ^MethodsPicture:32: error: value bleu is not a member of object java.awt.Color
avance(2);setCouleurBrosse(Color.bleu)fairev()
                                 ^MethodsPicture:34: error: value fairev is not a member of Unit
avance(2);setCouleurBrosse(Color.green)fairev()
                                       ^MethodsPicture:41: error: value bleu is not a member of object java.awt.Color
avance(2);setCouleurBrosse(Color.bleu)fairev()
                                 ^MethodsPicture:43: error: value fairev is not a member of Unit
avance(2);setCouleurBrosse(Color.green)fairev()
                                       ^MethodsPicture:50: error: value bleu is not a member of object java.awt.Color
avance(2);setCouleurBrosse(Color.bleu)fairev()
                                 ^MethodsPicture:52: error: value fairev is not a member of Unit
avance(2);setCouleurBrosse(Color.green)fairev()
                                       ^MethodsPicture:59: error: value bleu is not a member of object java.awt.Color
avance(2);setCouleurBrosse(Color.bleu)fairev()
                                 ^MethodsPicture:61: error: value fairev is not a member of Unit
avance(2);setCouleurBrosse(Color.green)fairev()
                                       ^MethodsPicture:68: error: value bleu is not a member of object java.awt.Color
avance(2);setCouleurBrosse(Color.bleu)fairev()
                                 ^MethodsPicture:70: error: value fairev is not a member of Unit
avance(2);setCouleurBrosse(Color.green)fairev()
                                       ^MethodsPicture:77: error: value bleu is not a member of object java.awt.Color
avance(2);setCouleurBrosse(Color.bleu)fairev()
                                 ^MethodsPicture:79: error: value fairev is not a member of Unit
avance(2);setCouleurBrosse(Color.green)fairev()
                                       ^